--- a/i3status.conf
+++ b/i3status.conf
@@ -14,7 +14,7 @@ general {
 	color_good = "#228B22"
 	color_bad = "#CC1616"
 	color_degraded = "#55858E"
-	interval = 2
+	#interval = 2
 }
 
 order += "sysdata"
