--- a/i3status.conf
+++ b/i3status.conf
@@ -17,13 +17,14 @@ general {
 	#interval = 2
 }
 
+order += "tztime local"
+order += "volume master"
+order += "battery 0"
 order += "sysdata"
 order += "keyboard_layout"
 order += "ethernet eth0"
 order += "wireless _first_"
-order += "tztime local"
-order += "volume master"
-order += "battery 0"
+# order += "fedora_updates"
 
 volume master {
 	format = " ♪: %volume  "
