Last known working config for workrave

--- a/workrave.ini
+++ b/workrave.ini
@@ -1,7 +1,7 @@
 [breaks]
 micro_pause.max_preludes=3
 micro_pause.enabled=false
-rest_break.max_preludes=3
+rest_break.max_preludes=1
 rest_break.enabled=true
 daily_limit.max_preludes=3
 daily_limit.enabled=false
@@ -13,10 +13,10 @@ micro_pause.reset_pred=
 micro_pause.snooze=150
 micro_pause.monitor=
 micro_pause.activity_sensitive=true
-rest_break.limit=1620
-rest_break.auto_reset=180
+rest_break.limit=1500
+rest_break.auto_reset=300
 rest_break.reset_pred=
-rest_break.snooze=120
+rest_break.snooze=0
 rest_break.monitor=
 rest_break.activity_sensitive=true
 daily_limit.limit=14400
@@ -32,10 +32,10 @@ breaks.micro_pause.exercises=0
 breaks.micro_pause.auto_natural=false
 breaks.micro_pause.skippable_break=true
 breaks.micro_pause.enable_shutdown=true
-breaks.rest_break.ignorable_break=true
+breaks.rest_break.ignorable_break=false
 breaks.rest_break.exercises=0
 breaks.rest_break.auto_natural=false
-breaks.rest_break.skippable_break=true
+breaks.rest_break.skippable_break=false
 breaks.rest_break.enable_shutdown=true
 breaks.daily_limit.ignorable_break=true
 breaks.daily_limit.exercises=0
@@ -85,3 +85,4 @@ reconnect_interval=15
 
 [general]
 operation-mode=1
+usage-mode=1
