--- a/i3status.conf
+++ b/i3status.conf
@@ -24,7 +24,7 @@ order += "sysdata"
 order += "keyboard_layout"
 order += "ethernet eth0"
 order += "wireless _first_"
-# order += "fedora_updates"
+order += "fedora_updates"
 
 volume master {
 	format = " ♪: %volume  "
@@ -56,4 +56,8 @@ battery 0 {
 
 keyboard_layout {
 	cache_timeout 0
+}
+
+fedora_updates {
+	cache_timeout 6000
 }
