system data in status bar

--- a/i3status.conf
+++ b/i3status.conf
@@ -26,6 +26,10 @@ order += "ethernet eth0"
 order += "wireless _first_"
 order += "fedora_updates"
 
+sysdata {
+	format = "[\?color=cpu CPU: {cpu_usage}%] at [\?color=temp {cpu_temp}C], [\?color=mem Mem: {mem_used}/{mem_total} GB ({mem_used_percent}%)]"
+}
+
 volume master {
 	format = " ♪: %volume  "
 	device = "default"
