--- a/i3status.conf
+++ b/i3status.conf
@@ -19,7 +19,7 @@ general {
 
 order += "tztime local"
 order += "volume master"
-order += "battery 0"
+order += "battery_level"
 order += "sysdata"
 order += "keyboard_layout"
 order += "ethernet eth0"
@@ -52,10 +52,11 @@ tztime local {
 	format = " %h-%d %H:%M"
 }
 
-battery 0 {
-	format = "%status %percentage"
-	path = "/sys/class/power_supply/BAT0/uevent"
-	low_threshold = 20
+battery_level {
+	format = "{percent}"
+	notification = True
+	notify_low_level = True
+	threshold_degraded = 10
 }
 
 keyboard_layout {
