trying new battery format

--- a/i3status.conf
+++ b/i3status.conf
@@ -52,7 +52,7 @@ tztime local {
 }
 
 battery_level {
-	format = "{percent}"
+	format = "{charging_character} {percent} {blocks}"
 	notification = True
 	notify_low_level = True
 	threshold_degraded = 10
