battery level icon changes when charging/discharging

--- a/i3status.conf
+++ b/i3status.conf
@@ -49,7 +49,7 @@ tztime local {
 }
 
 battery_level {
-	format = "{charging_character} {percent} {blocks}"
+	format = "{icon} {percent}%"
 	notification = True
 	notify_low_level = True
 	threshold_degraded = 10
