use clock module to display times for me and fam

--- a/i3status.conf
+++ b/i3status.conf
@@ -17,7 +17,7 @@ general {
 	#interval = 2
 }
 
-order += "tztime local"
+order += "clock"
 order += "volume master"
 order += "battery_level"
 order += "keyboard_layout"
@@ -44,9 +44,11 @@ wireless _first_ {
 	format_down = " ☡ WiFi "
 }
 
-tztime local {
-	format = " %h-%d %H:%M"
+clock {
+    format = ["{Europe/Berlin}", "{America/New_York}", "{America/Los_Angeles}"]
+	format_time = "{name} %m-%d %H:%M"
 }
+
 
 battery_level {
 	format = "{icon} {percent}%"
