don't notify on click for battery status

--- a/i3status.conf
+++ b/i3status.conf
@@ -52,9 +52,9 @@ clock {
 
 battery_level {
 	format = "{icon} {percent}%"
-	notification = True
 	notify_low_level = True
 	threshold_degraded = 10
+	cache_timeout = 5
 }
 
 keyboard_layout {
