familiar time formatting

--- a/i3status.conf
+++ b/i3status.conf
@@ -46,7 +46,7 @@ wireless _first_ {
 
 clock {
     format = ["{Europe/Berlin}", "{America/New_York}", "{America/Los_Angeles}"]
-	format_time = "{name} %m-%d %H:%M"
+	format_time = "{name} %d/%m %H:%M"
 }
 
 
