dev breakfast shortcut

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -20,3 +20,4 @@ weekly= ["c", "k", "weekly team meeting"]
 retro= ["c", "k", "retrospective"]
 est= ["c", "k", "estimation meeting"]
 sotu= ["i", "k", "State Of The Union; aka company weekly"]
+devb=["i", "k", "dev breakfast"]
