automatically link config files

--- a/i3status.conf
+++ b/i3status.conf
@@ -1,3 +1,4 @@
+#-> ~/.i3/{name}
 # Borrowed from github.com/rafi i3status config
 # However, note that this relies on at least one py3status module!
 
