some new shortcuts

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -14,6 +14,7 @@ c= "CoreEngine"
 n= "NLG-Plattform"
 i= "Intern"
 v= "Variant Suggestions"
+w="M3_Grammar"
 # Full activity shortcuts
 daily= ["c", "k", "daily stand-up"]
 amly= ["c", "k", "morning stand-up"]
@@ -21,5 +22,6 @@ pmly= ["c", "k", "afternoon stand-up"]
 weekly= ["c", "k", "weekly team meeting"]
 retro= ["c", "k", "retrospective"]
 est= ["c", "k", "estimation meeting"]
+prepest= ["c", "e", "estimate tickets before meeting"]
 sotu= ["i", "k", "State Of The Union; aka company weekly"]
 devb=["i", "k", "dev breakfast"]
