shortcut for sprint review

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -25,3 +25,4 @@ est= ["c", "k", "estimation meeting"]
 prepest= ["c", "e", "estimate tickets before meeting"]
 sotu= ["i", "k", "State Of The Union; aka company weekly"]
 devb=["i", "k", "dev breakfast"]
+sprintrev=["w", "k", "sprint review"]
