ml guild shortcut

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -26,3 +26,4 @@ prepest= ["c", "e", "estimate tickets before meeting"]
 sotu= ["i", "k", "State Of The Union; aka company weekly"]
 devb=["i", "k", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
+mlguild=["i", "e", "machine learning guild"]
