adjust internal shortcut due to update on rtr end

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -13,7 +13,7 @@ z= {"pattern"= "Konzeption", "match"= "strict"}
 # Projects
 c= "CoreEngine"
 n= "NLG-Plattform"
-i= "Intern"
+i= "Intern_"
 v= "Variant Suggestions"
 w="M3_Grammar"
 # Full activity shortcuts
