shortcut for hackathons

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -31,3 +31,4 @@ sotu= ["meet", "State Of The Union; aka company weekly"]
 devb=["meet", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
 mlguild=["i", "r", "machine learning guild"]
+hack=["i", "e", "hackathon"]
