shortcut for textengine sprint review

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -32,3 +32,4 @@ devb=["meet", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
 mlguild=["i", "r", "machine learning guild"]
 hack=["i", "e", "hackathon"]
+tiosr=["i", "k", "textengine.io sprint review"]
