core clean code shortcut

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -32,4 +32,5 @@ devb=["meet", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
 mlguild=["i", "r", "machine learning guild"]
 hack=["i", "e", "hackathon"]
-tiosr=["i", "k", "textengine.io sprint review"]
+tiosr=["meet", "textengine.io sprint review"]
+ccc=["meet", 'core clean code']
