shortcut for tio platform-relevant development

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -20,6 +20,7 @@ v= "Variant Suggestions"
 w="M6_Transformationsregeln"
 # Full activity shortcuts
 meet = ["i", "k"]
+tio = ["n", "e"]
 daily= ["meet", "daily stand-up"]
 amly= ["meet", "morning stand-up"]
 pmly= ["meet", "afternoon stand-up"]
