adjust entries for new year

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -15,9 +15,9 @@ r = "Research"
 is = "RTR intern"
 # Projects
 c= "CoreEngine"
-n= "NLG-Plattform"
 i= "Intern_"
 v= "Variant Suggestions"
+g="Guilds"
 # Current Westermann project
 w="M6_Transformationsregeln"
 # Full activity shortcuts
