ngl platform is back as a project :)

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -15,6 +15,7 @@ r = "Research"
 is = "RTR intern"
 # Projects
 c= "CoreEngine"
+n="NLG-Plattform"
 i= "Intern_"
 v= "Variant Suggestions"
 g="Guilds"
