update note entry for tio product demo

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -38,5 +38,5 @@ devb=["meet", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
 mlguild=["i", "r", "machine learning guild"]
 hack=["i", "e", "hackathon"]
-tiosr=["meet", "textengine.io sprint review"]
+tiodemo = ["meet", "textengine.io product demo"]
 ccc=["meet", 'core clean code']
