update westermann project shortcut

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -19,8 +19,8 @@ n="NLG-Plattform"
 i= "Intern_"
 v= "Variant Suggestions"
 g="Guilds"
-# Current Westermann project
-w="M6_Transformationsregeln"
+# Current Westermann project: QA and Hardening
+w="M8_Productive"
 # Full activity shortcuts
 meet = ["i", "k"]
 tio = ["n", "e"]
