jour fixe entry

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -40,3 +40,4 @@ mlguild=["i", "r", "machine learning guild"]
 hack=["i", "e", "hackathon"]
 tiodemo = ["meet", "textengine.io product demo"]
 ccc=["meet", 'core clean code']
+jf = ['meet', 'Jour Fixe with Wolfgang about improving delivery']
