only one entry for organizational matters

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -24,8 +24,7 @@ w="M8_Productive"
 # Full activity shortcuts
 meet = ["i", "k"]
 tio = ["n", "e"]
-orgam = ["i", "is", "morning task/email review"]
-orgpm = ["i", "is", "task/email review at end of day"]
+org = ["i", "is", "task/email review"]
 daily= ["meet", "daily stand-up"]
 amly= ["meet", "morning stand-up"]
 pmly= ["meet", "afternoon stand-up"]
