improve guild shortcuts

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -24,6 +24,7 @@ w="M8_Productive"
 # Full activity shortcuts
 meet = ["i", "k"]
 tio = ["n", "e"]
+guild_work = ["g", "e"]
 org = ["i", "is", "task/email review"]
 daily= ["meet", "daily stand-up"]
 amly= ["meet", "morning stand-up"]
@@ -35,7 +36,8 @@ prepest= ["meet", "estimate tickets before meeting"]
 sotu= ["meet", "State Of The Union; aka company weekly"]
 devb=["meet", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
-mlguild=["i", "r", "machine learning guild"]
+mlguild=["guild_work", "machine learning guild"]
+scguild=["guild_work", "software craftsmanship guild"]
 hack=["i", "e", "hackathon"]
 tiodemo = ["meet", "textengine.io product demo"]
 ccc=["meet", 'core clean code']
