workstation setup wip

--- a/i3status.conf
+++ b/i3status.conf
@@ -52,6 +52,9 @@ clock {
 
 
 battery_level {
+  battery_id = 0
+  measurement_mode = "sys"
+  sys_battery_path = "/sys/class/power_supply"
 	format = "{icon} {percent}%"
 }
 
