shorter shortcuts for guilds

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -37,8 +37,8 @@ prepest= ["meet", "estimate tickets before meeting"]
 sotu= ["meet", "State Of The Union; aka company weekly"]
 devb=["meet", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
-mlguild=["guild_work", "machine learning guild"]
-scguild=["guild_work", "software craftsmanship guild"]
+mlg=["guild_work", "machine learning guild"]
+scg=["guild_work", "software craftsmanship guild"]
 hack=["i", "e", "hackathon"]
 tiodemo = ["meet", "textengine.io product demo"]
 ccc=["meet", 'core clean code']
