combined shortcut for core development, switch estimation prep

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -25,6 +25,7 @@ w="M8_Productive"
 # Full activity shortcuts
 meet = ["i", "k"]
 tio = ["n", "e"]
+ce = ["c", "e"]
 guild_work = ["g", "e"]
 org = ["i", "is", "task/email review"]
 daily= ["meet", "daily stand-up"]
@@ -33,7 +34,7 @@ pmly= ["meet", "afternoon stand-up"]
 weekly= ["meet", "weekly team meeting"]
 retro= ["meet", "retrospective"]
 est= ["meet", "estimation meeting"]
-prepest= ["meet", "estimate tickets before meeting"]
+prepest= ["ce", "estimate tickets before meeting"]
 sotu= ["meet", "State Of The Union; aka company weekly"]
 devb=["meet", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
