shortcut for fraunhofer project

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -20,6 +20,7 @@ n="NLG-Plattform"
 i= "Intern_"
 v= "Variant Suggestions"
 g="Guilds"
+f="Fraunhofer Institut"
 # Current Westermann project: QA and Hardening
 w="SLA :: Westermann :: Workbook"
 # Full activity shortcuts
