shorter core shortcut, new activities

--- a/fastermite.toml
+++ b/fastermite.toml
@@ -15,7 +15,7 @@ r = "Research"
 is = "RTR intern"
 it = "IT-Administration"
 # Projects
-c= "CoreEngine"
+core= "CoreEngine"
 n="NLG-Plattform"
 i= "Intern_"
 v= "Variant Suggestions"
@@ -26,7 +26,10 @@ w="SLA :: Westermann :: Workbook"
 # Full activity shortcuts
 meet = ["i", "k"]
 tio = ["n", "e"]
-ce = ["c", "e"]
+c = ["core", "e"]
+cq = ["core", "q"]
+cd = ["core", "d"]
+cz = ["core", "z"]
 guild_work = ["g", "e"]
 org = ["i", "is", "task/email review"]
 daily= ["meet", "daily stand-up"]
@@ -35,7 +38,7 @@ pmly= ["meet", "afternoon stand-up"]
 weekly= ["meet", "weekly team meeting"]
 retro= ["meet", "retrospective"]
 est= ["meet", "estimation meeting"]
-prepest= ["ce", "estimate tickets before meeting"]
+prepest= ["c", "estimate tickets before meeting"]
 sotu= ["meet", "State Of The Union; aka company weekly"]
 devb=["meet", "dev breakfast"]
 sprintrev=["w", "k", "sprint review"]
@@ -45,3 +48,5 @@ hack=["i", "e", "hackathon"]
 tiodemo = ["meet", "textengine.io product demo"]
 ccc=["meet", 'core clean code']
 jf = ['meet', 'Jour Fixe with Wolfgang about improving delivery']
+sp = ['c', 'strategic programming']
+fa = ['c', 'triage of incoming tickets from tio that need first analysis']
